Reset Button Created

--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,15 @@ body{
 .row{
     display: flex;
 }
+
+.reset-button{
+    display: block;
+    margin: 0 auto;
+    padding: 10px 20px;
+    background-color:#ff8c1a;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
