--- a/styles.css
+++ b/styles.css
@@ -50,4 +50,11 @@ body{
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
+    box-shadow: 0 0 5px 2px  rgba(0, 0, 0, 0.3);
+}
+
+.reset-button:hover{
+    background-color: #ffa94d;
+    transition: 1s;
+    box-shadow: none;
 }
